--- a/wp-content/themes/test2/assets/styles/config.css
+++ b/wp-content/themes/test2/assets/styles/config.css
@@ -51,3 +51,225 @@
 .tt-uppercase { text-transform: uppercase; }
 .tt-lowercase { text-transform: lowercase; }
 .tt-capitalize { text-transform: capitalize; }
+
+
+
+
+
+
+
+
+
+.product img {
+    /* display: none !important; */
+    
+}
+
+.product {
+
+}
+
+.product .product-info {
+    display: flex;
+}
+.product .product-col {
+    /* border: 1px solid red; */
+}
+.product .product-col.gallery {
+    width: 330px;
+}
+
+.product-image-large {
+    margin-bottom: 2%;
+
+    box-shadow: 0 0 8px #DDDDDD;
+    border: 1px solid #DDDDDD;
+}
+.product-image-large img {
+    width: 100%;
+    border: 6px solid #FFFFFF;
+}
+
+.product-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.product-gallery-item {
+    width: 31.3%;
+}
+.product-image-small {
+    box-shadow: 0 0 8px #DDDDDD;
+    border: 1px solid #DDDDDD;
+}
+.product-image-small img {
+    width: 100%;
+    border: 4px solid #FFFFFF;
+}
+
+
+
+.product .product-col.general {
+    flex-grow: 1;
+}
+.product-compare {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+.product-compare .fa-balance-scale-left {
+    font-size: 16px;
+    color: #006183;
+}
+.product-col.action .action-add-compare {
+    display: block;
+    text-align: center;
+    margin-left: 3px;
+
+    font-family: 'Proba Pro', sans-serif;
+    font-size: 16px;
+}
+
+
+
+
+.product .product-col.action {
+    flex-basis: 20%;
+}
+
+
+
+
+
+
+
+
+
+
+
+.tab-control {
+    margin-top: 24px;
+	background-color: #F4F4F4;
+}
+.tab-list {
+	position: relative;
+	margin: 0;
+	padding-left: 0;
+    width: 100%;
+    list-style: none;
+	border: 1px solid #DDDDDD;
+}
+.tab-list:after {
+	clear: both; 
+}
+.tab-item {
+    display: inline;
+}
+.tab-button {
+	position: relative;
+	display: inline-block;
+	*display: inline;
+	*vertical-align: auto;
+	padding: 10px 26px;
+	font-size: 12px;
+	text-transform: uppercase;
+	text-rendering: optimizeSpeed;
+	text-decoration: none;
+	color: #636363;
+}
+.tab-button:before {
+	content: '';
+    position: absolute;
+    display: none;
+    margin-top: -3px;
+    top: 50%;
+    left: 10px;
+    width: 0;
+	height: 0;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    border-top: 4px solid #30AC49;
+	border-bottom: none;
+	transform: rotate(-90deg);
+}
+.tab-button:hover {
+    text-decoration: none;
+	color: #1E96A6;
+}
+.tab-item.open:first-child .tab-button {
+	border-left: none;
+}
+.tab-item.open .tab-button {
+	color: #006183;
+	background-color: #FFFFFF;
+	border-left: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;
+}
+.tab-button:focus {
+	outline: none;
+}
+.tab-content {
+	display: none;
+	margin-left: -1px;
+	padding: 10px;
+	width: calc(100% + 2px);
+	float: left;
+	background-color: #FFFFFF;
+	border: 1px solid #DDDDDD;
+	overflow: hidden;
+}
+.tab-item.open .tab-content {
+	display: block;
+}
+
+@media (max-width: 770px) {
+    .tab-control {
+        margin-left: 30px;
+        margin-right: 30px;
+
+        background-color: transparent;
+        border: none;
+    }
+    .tab-list {
+        display: block;
+        border: none
+    }
+    .tab-list:before, 
+    .tab-list:after {
+        content: '';
+        display: table;
+    }
+    .tab-button {
+        margin-top: 10px;
+        padding-left: 26px;
+        width: 100%;
+        
+        background-color: #F4F4F4;
+        border: 1px solid #DDDDDD;
+    }
+    .tab-button:before {
+        display: block;
+    }
+    .tab-item.open .tab-button:before {
+        transform: rotate(0);
+    }
+    .tab-item.open:first-child .tab-button {
+        border-left: 1px solid #DDDDDD;
+    }
+    .tab-item.open .tab-button {
+        color: #006183;
+    
+        background-color: #F4F4F4;
+        border-bottom: none;
+    }
+    .tab-button:hover {
+        color: #636363;
+    }
+    .tab-content {
+        margin: 0;
+        width: 100%;
+        
+        border: 1px solid #DDDDDD;
+    }
+}
