--- a/wp-content/themes/test/assets/styles/main.css
+++ b/wp-content/themes/test/assets/styles/main.css
@@ -809,10 +809,10 @@ li.cart a .cart-count {
     color: #006283;
 }
 
-.product-quantity {
+.quantity {
     display: flex;
 }
-.product-quantity * {
+.quantity * {
     padding: 10px 15px;
     max-width: 60px;
     text-align: center;
@@ -837,14 +837,14 @@ li.cart a .cart-count {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-.product-quantity input[type="number"] {
+.quantity input[type="number"] {
     padding: 0;
     font-family: inherit;
     font-size: 18px;
     -moz-appearance: textfield;
 }
-.product-quantity input[type="number"]::-webkit-inner-spin-button,
-.product-quantity input[type="number"]::-webkit-outer-spin-button {
+.quantity input[type="number"]::-webkit-inner-spin-button,
+.quantity input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
