--- a/wp-content/themes/test2/assets/styles/main.css
+++ b/wp-content/themes/test2/assets/styles/main.css
@@ -31,6 +31,7 @@ body img {
 /* ************************************************************************ */
 .header {
     position: relative;
+    z-index: 900;
 }
 .header-wrapper {
     padding-left: 15px;
@@ -893,6 +894,7 @@ li.cart a .cart-count {
     margin-top: auto;
     padding: 30px;
     background-color: #333333;
+    z-index: 900;
 }
 .footer .container {
     max-width: 1140px;
