--- a/wp-content/themes/test/style.css
+++ b/wp-content/themes/test/style.css
@@ -99,7 +99,8 @@ label {
 .button,
 button {
     display: block;
-    padding: 6px 16px;
+	padding: 6px 16px;
+	font-weight: normal;
     text-decoration: none;
     text-align: center;
     color: #FFFFFF;
@@ -115,18 +116,34 @@ button:hover {
 input[type='email'],
 input[type='tel'],
 input[type='text'] {
-	padding: 1px 8px;
+	padding: 6px 8px;
+	font-family: inherit;
+	font-size: 16px;
 	border: 1px solid #AAAAAA;
 	border-radius: 4px;
 }
 
 textarea {
-	padding: 1px 8px;
+	padding: 6px 8px;
 	min-width: 100%;
 	max-width: 100%;
 	min-height: 27px;
+	font-family: inherit;
+	font-size: 16px;
 	border: 1px solid #AAAAAA;
 	border-radius: 4px;
+}
+
+.select2-container .select2-selection--single {
+	height: auto;
+}
+.select2-container .select2-selection--single .select2-selection__rendered {
+	padding-top: 8px;
+	padding-bottom: 8px;
+	line-height: 1;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+	height: calc(100% + 2px);
 }
 
 
@@ -164,3 +181,18 @@ textarea {
 
 
 
+.woocommerce #respond input#submit:hover, .woocommerce a.button:hover, .woocommerce button.button:hover, .woocommerce input.button:hover {
+    background-color: #D93C37;
+	text-decoration: none;
+	color: #FFFFFF;
+}
+.woocommerce #respond input#submit, .woocommerce a.button, .woocommerce button.button, .woocommerce input.button {
+	display: block;
+	padding: 6px 16px;
+	font-weight: normal;
+    text-decoration: none;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #F44336;
+    border-radius: 4px;
+}
